Show error with gn desc when no matches are made

This tells the user that they input a value that matches nothing
so that they know they need to correct the input and try again
rather than showing no output and acting like the command worked
correctly

Bug: 646012
Change-Id: I9e796a4a09216dde8939e4a60b255f8beff0c52b
Reviewed-on: https://chromium-review.googlesource.com/1037910
Reviewed-by: Dirk Pranke <dpranke@chromium.org>
Commit-Queue: Eli Ribble <eliribble@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555188}
Former-commit-id: 9e71c94d75e6c6e8fecbb601ddde8d3f35c4fba1